<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.sprint3mobile.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_participantes"
        android:name="com.example.sprint3mobile.ui.participantes.ParticipantesFragment"
        android:label="@string/title_participantes"
        tools:layout="@layout/fragment_participantes" />

    <fragment
        android:id="@+id/navigation_empresas"
        android:name="com.example.sprint3mobile.ui.empresas.EmpresasFragment"
        android:label="@string/title_empresas"
        tools:layout="@layout/fragment_empresas" />

    <fragment
        android:id="@+id/navigation_cadastrarempresas"
        android:name="com.example.sprint3mobile.ui.cadastrarEmpresas.CadastrarEmpresaFragment"
        android:label="@string/title_cadastrarempresas"
        tools:layout="@layout/fragment_cadastrar_empresa" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.example.sprint3mobile.ui.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />
</navigation>